feat: add containerId to docs

--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -199,7 +199,8 @@ By default, the Modal will be rendered at the end of the html body tag. If you w
 | **ref**                 | `React.RefElement<HTMLDivElement>`                                                                                                                                                                                                     | undefined | Ref for modal dialog element                                                                                                                                                                                       |
 | **ariaLabelledby**      | `string`                                                                                                                                                                                                                               |           | ARIA label for modal                                                                                                                                                                                               |
 | **ariaDescribedby**     | `string`                                                                                                                                                                                                                               |           | ARIA description for modal                                                                                                                                                                                         |
-| **modalId**             | `string`                                                                                                                                                                                                                               |           | id attribute for modal                                                                                                                                                                                             |
+| **containerId**         | `string`                                                                                                                                                                                                                               |           | id attribute for modal container                                                                                                                                                                                   |
+| **modalId**             | `string`                                                                                                                                                                                                                               |           | id attribute for modal                                                                                                                                                                                             |  |
 | **onClose\***           | `() => void`                                                                                                                                                                                                                           |           | Callback fired when the Modal is requested to be closed by a click on the overlay or when user press esc key.                                                                                                      |
 | **onEscKeyDown\***      | `(event: KeyboardEvent) => void`                                                                                                                                                                                                       |           | Callback fired when the escape key is pressed.                                                                                                                                                                     |
 | **onOverlayClick\***    | `(event: React.MouseEvent<HTMLDivElement, MouseEvent>) => void`                                                                                                                                                                        |           | Callback fired when the overlay is clicked.                                                                                                                                                                        |
