Add keepMounted option

--- a/website/src/docs/index.mdx
+++ b/website/src/docs/index.mdx
@@ -205,6 +205,7 @@ By default, the Modal will be rendered at the end of the html body tag. If you w
 | **onEscKeyDown\***      | `(event: KeyboardEvent) => void`                                                                                                                                                                                                       |           | Callback fired when the escape key is pressed.                                                                                                                                                                     |
 | **onOverlayClick\***    | `(event: React.MouseEvent<HTMLDivElement, MouseEvent>) => void`                                                                                                                                                                        |           | Callback fired when the overlay is clicked.                                                                                                                                                                        |
 | **onAnimationEnd\***    | `() => void`                                                                                                                                                                                                                           |           | Callback fired when the Modal has exited and the animation is finished.                                                                                                                                            |
+| **keepMounted**         | `boolean`                                                                                                                                                                                                                              | false     | Keeps the Modal mounted to the DOM tree even when it is hidden. This is useful for keeping DOM state inside the Modal as well as for SEO purposes.                                                                 |
 
 ## License
 
